# pepino

./: BNF.md  CMakeLists.txt  LICENSE  README.md  main.cpp
Testing/: TAG
Testing/20250328-1906/: Test.xml
examples/: main.lox
include/: context.h  lox.h  pepino.h
include/hooks/: HookRegistry.h  hooks.h
include/pepino/: pepino.h
include/pepino/hooks/: HookRegistry.h  hooks.h
include/pepino/steps/: StepRegistry.h  steps.h
include/steps/: StepRegistry.h  TypeConverters.h  steps.h
include/types/: types.h
src/: AstPrinter.hpp  BaseExpression.h  BaseStatement.h  BasicTestRunner.cpp  BasicTestRunner.h  Catch2TestRunner.cpp  Catch2TestRunner.h  Environment.cpp  Environment.h  Function.cpp  Function.h  HookRegistry.cpp  IStepRegistry.h  ITestRunner.h  InputParser.cpp  InputParser.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Logger.cpp  Logger.h  Object.cpp  Object.h  Parser.cpp  Parser.h  Resolver.cpp  Resolver.h  StepRegistry.cpp  StepRegistry.h  TestController.cpp  TestController.h  Token.cpp  Token.h  lox.cpp  pepino.cpp
src/parsing/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Statement.h  Token.cpp  Token.h
tests/: AstPrinter_test.cpp  Interpreter_test.cpp  Lexer_test.cpp  Object_test.cpp  Parser_test.cpp  lexer_test.cpp  lox_test.cpp  parser_test.cpp  pepino_test.cpp  step_implementations.cpp  steps_test.cpp
tests/data/: normal_lox.txt  normal_pepino.feature  normal_pepino.txt  one_step.feature  type_assertion.feature
